--- a/sass/layout/_02-hero.scss
+++ b/sass/layout/_02-hero.scss
@@ -37,8 +37,7 @@
     }
 
     .container {
-        @include flex;
-        flex-direction: column;
+        @include flex-column;
 
         @media screen and (min-width: 1400px) {
             padding-left: 46px;
@@ -111,8 +110,7 @@
         padding: 32px;
         padding-top: 35px;
         padding-bottom: 30px;
-        @include flex;
-        flex-direction: column;
+        @include flex-column;
         gap: 32px;
 
         @media screen and (min-width: 768px) {
@@ -133,8 +131,7 @@
         }
 
         &__item {
-            @include flex;
-            flex-direction: column;
+            @include flex-column;
             gap: 4px;
 
             @media screen and (min-width: 1920px) {
@@ -221,10 +218,17 @@
             align-items: center;
             border-radius: 100%;
             background-color: var(--white);
+            cursor: pointer;
             // fill: var(--white);
             // stroke-width: 1px;
             // stroke: var(--white);
             // box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
+
+            @include multi-transition(transform);
+
+            &:hover {
+                transform: scale(1.2);
+            }
         }
     }
 
@@ -276,6 +280,11 @@
                 text-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
                 writing-mode: vertical-rl;
                 transform: rotate(180deg);
+                @include multi-transition(color);
+
+                &:hover {
+                    color: var(--main-color);
+                }
             }
         }
     }
