--- a/sass/layout/_03-travel.scss
+++ b/sass/layout/_03-travel.scss
@@ -5,8 +5,7 @@
     background-position: center;
 
     .container {
-        @include flex;
-        flex-direction: column;
+        @include flex-column;
         gap: 30px;
 
         @media screen and (min-width: 1400px) {
@@ -40,7 +39,6 @@
         font-size: 16px;
         line-height: 150%;
         letter-spacing: 0.03em;
-        color: var(--text-lighten);
 
         @media screen and (min-width: 768px) {
             text-align: center;
