--- a/sass/layout/_09-getting.scss
+++ b/sass/layout/_09-getting.scss
@@ -56,8 +56,7 @@
     }
 
     .getting-list {
-        @include flex;
-        flex-direction: column;
+        @include flex-column;
         gap: 32px;
 
         @media screen and (min-width: 768px) {
@@ -77,8 +76,7 @@
         }
 
         &__item {
-            @include flex;
-            flex-direction: column;
+            @include flex-column;
             align-items: center;
             // margin-bottom: 32px;
 
@@ -169,7 +167,6 @@
         }
 
         &__description {
-            font-weight: 400;
             font-size: 16px;
             line-height: 150%;
             letter-spacing: 0.03em;
@@ -209,7 +206,6 @@
         }
 
         &__button {
-            font-weight: 400;
             font-size: 16px;
             line-height: 150%;
             letter-spacing: 0.03em;
