--- a/sass/layout/_10-footer.scss
+++ b/sass/layout/_10-footer.scss
@@ -10,8 +10,7 @@
     }
 
     .container {
-        @include flex;
-        flex-direction: column;
+        @include flex-column;
         align-items: center;
         gap: 36px;
 
@@ -33,8 +32,7 @@
     }
 
     .address-list {
-        @include flex;
-        flex-direction: column;
+        @include flex-column;
         align-items: center;
         gap: 36px;
         margin-bottom: 36px;
@@ -53,9 +51,13 @@
         &__link {
             font-weight: 700;
             font-size: 22px;
-            line-height: 156%;
             letter-spacing: 0.03em;
             color: var(--white);
+            @include multi-transition(color);
+
+            &:hover {
+                color: var(--main-color);
+            }
         }
     }
 
@@ -75,6 +77,12 @@
         &__item {
             @include flex;
             align-items: center;
+            fill: var(--white);
+            @include multi-transition(fill);
+
+            &:hover {
+                fill: var(--main-color);
+            }
         }
     }
 
@@ -89,6 +97,14 @@
         left: calc(50% - 52px);
         background-color: var(--main-color);
         border-radius: 100%;
+        fill: var(--white);
+        @include multi-transition((fill, background-color));
+
+        &:hover {
+            fill: var(--main-color);
+            background-color: var(--white);
+            border: 2px solid black;
+        }
 
         @media screen and (min-width: 1400px) {
             left: calc(90% - 52px);
