--- a/sass/layout/_04-explore.scss
+++ b/sass/layout/_04-explore.scss
@@ -89,6 +89,7 @@
     }
 
     .slider-list__item {
+        cursor: pointer;
         flex-shrink: 0; 
         width: 314px; 
         border-radius: 8px;
@@ -167,5 +168,31 @@
                 border-radius: 9.5px;
             }
         }
+    }
+}
+
+.lightbox-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9); 
+    display: none; 
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; 
+    overflow-y: auto; 
+
+    &__content {
+        max-width: 90%;
+        max-height: 90%;
+        object-fit: contain; 
+        cursor: default; 
+        border-radius: 20px; 
+    }
+
+    &--visible {
+        display: flex;
     }
 }
