--- a/css/main.css
+++ b/css/main.css
@@ -862,6 +862,7 @@ body {
   }
 }
 .explore .slider-list__item {
+  cursor: pointer;
   flex-shrink: 0;
   width: 314px;
   border-radius: 8px;
@@ -934,6 +935,30 @@ body {
   background-color: var(--primary-color);
   width: 30px;
   border-radius: 9.5px;
+}
+
+.lightbox-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  overflow-y: auto;
+}
+.lightbox-modal__content {
+  max-width: 90%;
+  max-height: 90%;
+  object-fit: contain;
+  cursor: default;
+  border-radius: 20px;
+}
+.lightbox-modal--visible {
+  display: flex;
 }
 
 .numbers {
