--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ body {
   letter-spacing: 0.01em;
   text-transform: uppercase;
   color: var(--white);
-  transition: color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, fill 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, fill 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 .logo--red {
   color: var(--main-color);
@@ -152,7 +152,7 @@ body {
 }
 
 .burger-menu {
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
   position: fixed;
   left: 0;
   top: 0;
@@ -210,6 +210,68 @@ body {
   overflow: hidden;
 }
 
+.preload {
+  position: fixed;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--white);
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+.preload__animation {
+  animation-name: preload;
+  animation-duration: 3s;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
+}
+.preload__title {
+  font-family: var(--second-family);
+  font-weight: 900;
+  font-size: 58px;
+  line-height: 108%;
+  text-transform: uppercase;
+  color: orange;
+  margin-bottom: 35px;
+  max-width: 345px;
+  text-align: center;
+}
+.preload__loader {
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #3498db;
+  border-radius: 100%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 1;
+  }
+}
+@keyframes preload {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+  }
+}
 .header {
   padding-top: 28px;
   margin-bottom: 45px;
@@ -262,7 +324,7 @@ body {
 .header .container .header__nav .hlist__link {
   text-transform: uppercase;
   color: var(--white);
-  transition: color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 .header .container .header__nav .hlist__link:hover {
   color: var(--main-color);
@@ -276,7 +338,7 @@ body {
   align-items: center;
   fill: var(--white);
   cursor: pointer;
-  transition: fill 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: fill 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 .header .container .header__nav .hlist-mobile__item:hover {
   fill: var(--main-color);
@@ -363,7 +425,7 @@ body {
   text-align: center;
   color: rgba(255, 255, 255, 0.8);
   cursor: pointer;
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
   margin-bottom: 54px;
 }
 .hero__button:hover {
@@ -394,7 +456,7 @@ body {
     text-align: center;
     color: rgba(255, 255, 255, 0.8);
     cursor: pointer;
-    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
   }
   .hero__button:hover {
     color: var(--main-color);
@@ -537,7 +599,7 @@ body {
   border-radius: 100%;
   background-color: var(--white);
   cursor: pointer;
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 .hero .video-container__circle:hover {
   transform: scale(1.2);
@@ -555,29 +617,8 @@ body {
     right: 0px;
   }
 }
-.hero__vertical__1rectangle {
-  width: 4px;
-  height: 100px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.45);
-  background: var(--main-color);
-  margin: 0 auto;
-}
-.hero__vertical__2rectangle {
-  width: 2px;
-  height: 296px;
-  background: var(--white);
-  margin: 0 auto;
-  margin-bottom: 20px;
-}
-.hero__vertical__number {
-  font-weight: 700;
-  font-size: 16px;
-  color: var(--white);
-  text-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
-  transform: rotate(270deg);
-  margin-bottom: 226px;
-}
 .hero__vertical .sociallist {
+  margin-top: 675px;
   display: flex;
   flex-direction: column;
   gap: 35px;
@@ -587,9 +628,7 @@ body {
   font-size: 16px;
   color: var(--white);
   text-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
-  writing-mode: vertical-rl;
-  transform: rotate(180deg);
-  transition: color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 .hero__vertical .sociallist__link:hover {
   color: var(--main-color);
@@ -660,7 +699,7 @@ body {
   text-align: center;
   color: rgb(255, 255, 255);
   cursor: pointer;
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 .walkways__button:hover {
   color: var(--main-color);
@@ -688,7 +727,7 @@ body {
     text-align: center;
     color: rgb(255, 255, 255);
     cursor: pointer;
-    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
     margin: 0 auto;
   }
   .walkways__button:hover {
@@ -909,7 +948,7 @@ body {
   }
 }
 .explore .slider-buttons-list__button {
-  transition: fill 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: fill 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
   cursor: pointer;
 }
 .explore .slider-buttons-list__button:hover {
@@ -1144,7 +1183,7 @@ body {
   text-align: center;
   color: rgb(255, 255, 255);
   cursor: pointer;
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
   margin: 0 auto;
   margin-bottom: 116px;
 }
@@ -1174,7 +1213,7 @@ body {
     text-align: center;
     color: rgb(255, 255, 255);
     cursor: pointer;
-    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
   }
   .hills__button:hover {
     color: var(--main-color);
@@ -1203,7 +1242,7 @@ body {
     text-align: center;
     color: rgb(255, 255, 255);
     cursor: pointer;
-    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
     margin-bottom: 256px;
   }
   .hills__button:hover {
@@ -1312,7 +1351,7 @@ body {
   border-radius: 100%;
   background-color: #e93a7d;
   cursor: pointer;
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 .life .video-container2__circle2:hover {
   transform: scale(1.2);
@@ -1538,7 +1577,7 @@ body {
     text-align: center;
     color: rgb(255, 255, 255);
     cursor: pointer;
-    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
   }
   .getting__button:hover {
     color: var(--main-color);
@@ -1823,7 +1862,7 @@ body {
   font-size: 22px;
   letter-spacing: 0.03em;
   color: var(--white);
-  transition: color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 .footer .address-list__link:hover {
   color: var(--main-color);
@@ -1846,7 +1885,7 @@ body {
   display: flex;
   align-items: center;
   fill: var(--white);
-  transition: fill 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: fill 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 .footer .address-social-list__item:hover {
   fill: var(--main-color);
@@ -1863,7 +1902,7 @@ body {
   background-color: var(--main-color);
   border-radius: 100%;
   fill: var(--white);
-  transition: fill 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 500ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: fill 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s, background-color 750ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 .footer__top-link:hover {
   fill: var(--main-color);
