--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./components/containers";
 @import "./components/logo";
 @import "./components/burger-menu";
+@import "./components/preload";
 @import "./layout/01-header";
 @import "./layout/02-hero";
 @import "./layout/03-travel";
